add plugins "jextract-maven-plugin" and "maven-compiler-plugin" from pom.xml